# RussiaGuideRepositoey

./: .env  Dockerfile  README.md  amvera.yml  pyproject.toml
src/: main.py
src/alembic/: env.py
src/alembic/versions/: 0310d9969598_.py  102ff5ba0bf3_.py  4c230f669068_.py  743c2641d145_.py  7a17d62acd2d_.py  8113b748b8f3_.py  a09398b31d92_.py  c61ea666e921_.py  eb464694915a_.py  fda0c63d9572_.py
src/api/: categories.py  cities.py  completed_routes.py  places.py  routes.py
src/models/: __init__.py  category.py  city.py  completed_routes.py  places.py  routes.py
src/schemas/: category.py  city.py  completed_routes.py  places.py  routes.py
src/services/: category.py  city.py  completed_routes.py  database.py  places.py  routes.py
