[tool.poetry]
name = "russiaguidebackend"
version = "0.1.0"
description = ""
authors = ["AveGus(Eldar) <garipov.eldar200@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.5"
uvicorn = "^0.32.1"
sqlalchemy = {extras = ["asyncpg"], version = "^2.0.36"}
python-dotenv = "^1.0.1"
alembic = "^1.14.0"
asyncpg = "^0.30.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
